iface-modem: fix segfault if attempting to switch slot and slots unsupported

Reported and fix suggested by Maxim Anisimov

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/368